--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="App.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <meta
       name = "Business Communication Platform for BVT"
       content = "Website created using create-react-app"
